actualizacion de estilos

--- a/src/CreateTodoButton/createtodobutton.css
+++ b/src/CreateTodoButton/createtodobutton.css
@@ -1,7 +1,7 @@
 .CreateTodoButton {
     background-color: #1d3557;
     border: none;
-    border-radius: 50%;
+    border-radius: 10px;
     cursor: pointer;
     font-size: 50px;
     position: fixed;
