--- a/src/TodoForm/TodoForm.css
+++ b/src/TodoForm/TodoForm.css
@@ -37,7 +37,7 @@ form {
   }
   
   textarea:focus {
-    outline-color: #61DAFA;
+    outline-color: #1d3557;
   }
   
   .TodoForm-buttonContainer {
@@ -62,10 +62,12 @@ form {
   }
   
   .TodoForm-button--add {
-    background: #61DAFA;
+    color: white;
+    background: #1d3557;
     box-shadow: 0px 5px 25px rgba(97, 218, 250, 0.5);
   }
   
   .TodoForm-button--cancel {
+    border: 2px solid #1d3557;
     background: transparent;
   }
