--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,15 @@
-body{
-    margin: 0;
-    padding: 0;
-    background: #a8dadc;
-    font-family: "Montserrat", sans-serif;
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #fafeff;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 2 1'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='1'%3E%3Cstop offset='0' stop-color='%23FAFEFF'/%3E%3Cstop offset='1' stop-color='%23FFFFFF'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='0' y2='1'%3E%3Cstop offset='0' stop-color='%234DB6BF' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%234DB6BF' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='c' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='2' y2='2'%3E%3Cstop offset='0' stop-color='%234DB6BF' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%234DB6BF' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='2' height='1'/%3E%3Cg fill-opacity='0.55'%3E%3Cpolygon fill='url(%23b)' points='0 1 0 0 2 0'/%3E%3Cpolygon fill='url(%23c)' points='2 1 2 0 0 0'/%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
+  font-family: "Montserrat", sans-serif;
 }
 
-#root{
-    margin: 0 24px;
-    position: relative;
-    min-height: 100vh;
+#root {
+  margin: 0 24px;
+  position: relative;
+  min-height: 100vh;
 }
