--- a/src/CreateTodoButton/createtodobutton.css
+++ b/src/CreateTodoButton/createtodobutton.css
@@ -8,4 +8,11 @@
     font-weight: bold;
     color: #1d3557;
     z-index: 1;
+
+    transition: .2s all;
+}
+
+.CreateTodoButton:hover{
+    font-size: 60px;
+    color:#063474
 }
