--- a/src/TodoItem/todoitem.css
+++ b/src/TodoItem/todoitem.css
@@ -1,16 +1,16 @@
 .TodoItem {
   background-color: #fafafa;
+  border-left: 10px solid #1d3557;
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-top: 24px;
-  box-shadow: 0 5px 50px rgba(32, 35, 41, 0.15);
+  box-shadow: 2px 2px 5px grey;
 }
 .TodoItem-p {
-  margin: 24px 0 24px 24px;
   width: calc(100% - 120px);
-  font-size: 18px;
+  font-size: 20px;
   line-height: 24px;
   font-weight: 400;
 }
